--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <script
 src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -12,8 +13,16 @@ integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>
     
+<h1>MY DEVELOPER SKILLS</h1>
+<h2>
+    <ul>
+            <td><button class="btn btn-xs btn-danger">X</button></td>
+    </ul>
+</h2>
 </head>
 <body>
-    
+    <button id="addSkill">ADD SKILL</button>
+    <input type="textbox" name="inputName" id="inputId"></input>
+
 </body>
 </html>
