removes the list that is click on

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ crossorigin="anonymous"></script>
 <h1>MY DEVELOPER SKILLS</h1>
 <h2>
     <ul>
-            <td><button class="btn btn-xs btn-danger">X</button></td>
+        <!-- <button class="btn btn-xs btn-danger">X</button> -->
     </ul>
 </h2>
 </head>
